syntax = "proto3";

package angel.serving;
option java_package = "com.tencent.angel.metrics";
option java_outer_classname = "ServingMetricsProtos";

message MetricsResponse {
    map<string, Versions> models = 1;

    message Versions {
        map<string, Metrics> versions = 1;
    }
}

message Metrics {
    string model_name = 1; // 模型名
    uint32 model_version = 2; // 版本
    uint64 prediction_count_total = 3; // 请求总数：查询时刻之前的累加请求总数.
    uint64 prediction_count_success = 4; // 请求成功总数：查询时刻之前的累加请求成功总数.
    uint64 prediction_count_failed = 5; // 请求失败总数：查询时刻之前的累加请求失败总数.
    double total_predict_time_ms = 6; // 请求成功的总耗时:查询时刻之前的累加请求成功的总耗时(单位: ms)

    uint64 count_distribution0 = 7; // 请求成功次数 0~5ms
    uint64 count_distribution1 = 8; // 请求成功次数 5~10ms
    uint64 count_distribution2 = 9; // 请求成功次数 10~15ms
    uint64 count_distribution3 = 10; // 请求成功次数 >15ms
}